// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component renders a button tag when the component is mounted 1`] = `
<button href="#" type="button" class="inline-flex items-center justify-center font-medium transition-colors duration-300 ease-in-out rounded-sm focus:outline-none whitespace-nowrap h-10 px-4 py-2 text-base leading-8 bg-juniper text-ink-400 hover:bg-light-juniper">
  <!---->
</button>
`;

exports[`Button component renders a button tag with the given text 1`] = `
<button href="#" type="button" class="inline-flex items-center justify-center font-medium transition-colors duration-300 ease-in-out rounded-sm focus:outline-none whitespace-nowrap h-10 px-4 py-2 text-base leading-8 bg-juniper text-ink-400 hover:bg-light-juniper">
  <!----> Hello World
</button>
`;

exports[`Button component renders a button with primary color 1`] = `
<button href="#" type="button" class="inline-flex items-center justify-center font-medium transition-colors duration-300 ease-in-out rounded-sm focus:outline-none whitespace-nowrap z-btn--primary h-10 px-4 py-2 text-base leading-8 bg-juniper text-ink-400 hover:bg-light-juniper">
  <!----> Primary Button
</button>
`;

exports[`Button component renders a button with secondary color 1`] = `
<button href="#" type="button" class="inline-flex items-center justify-center font-medium transition-colors duration-300 ease-in-out rounded-sm focus:outline-none whitespace-nowrap z-btn--secondary h-10 px-4 py-2 text-base leading-8 bg-juniper text-ink-400 hover:bg-light-juniper">
  <!----> Secondary Button
</button>
`;

exports[`Button component renders a button with the given size(large) 1`] = `
<button href="#" type="button" class="inline-flex items-center justify-center font-medium transition-colors duration-300 ease-in-out rounded-sm focus:outline-none whitespace-nowrap h-12 px-4 py-2.5 text-lg leading-9 bg-juniper text-ink-400 hover:bg-light-juniper">
  <!----> Large Button
</button>
`;

exports[`Button component renders a disabled button when the disabled attribute is passed 1`] = `
<button href="#" disabled="disabled" type="button" class="inline-flex items-center justify-center font-medium transition-colors duration-300 ease-in-out rounded-sm focus:outline-none whitespace-nowrap h-10 px-4 py-2 text-base leading-8 bg-juniper text-ink-400 opacity-50 cursor-not-allowed">
  <!----> Disabled Button
</button>
`;

exports[`Button component renders a full-width button 1`] = `
<button href="#" type="button" class="inline-flex items-center justify-center font-medium transition-colors duration-300 ease-in-out rounded-sm focus:outline-none whitespace-nowrap w-full h-10 px-4 py-2 text-base leading-8 bg-juniper text-ink-400 hover:bg-light-juniper">
  <!----> Full Width Button
</button>
`;

exports[`Button component renders a link tag when type is specified as link 1`] = `
<a href="https://deepsource.io/" type="link" class="inline-flex items-center justify-center font-medium transition-colors duration-300 ease-in-out rounded-sm focus:outline-none whitespace-nowrap z-btn--link p-0 bg-juniper text-ink-400 hover:bg-light-juniper">
  <!----> Link Button
</a>
`;
